tests/files/type_checker_tests/should_fail/035.cmdr
//Should fail when subtracting incompatible types
x = 3 - false;
